자료구조 - 참조, 포인터

--- a/Data Structure/1ST/20230309/20230309/20230309.vcxproj
+++ b/Data Structure/1ST/20230309/20230309/20230309.vcxproj
@@ -139,10 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Swap함수 만들기.cpp" />
     <ClCompile Include="구구단.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="산술 문제 자동 출제 .cpp" />
+    <ClCompile Include="산술 문제 자동 출제 .cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="숫자 맞추기 게임 .cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
