자료구조 - 벡터, 배열 숙제 완료

--- a/Data Structure/1ST/20230315/20230315/20230315.vcxproj
+++ b/Data Structure/1ST/20230315/20230315/20230315.vcxproj
@@ -145,9 +145,11 @@
     <ClCompile Include="벡터.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="성적평균구하기.cpp" />
-    <ClCompile Include="틱택톡.cpp">
+    <ClCompile Include="성적평균구하기.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="틱택톡.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
