--- a/GameProgramming/1ST/(23.03.13).gamep/(23.03.13).gamep/(23.03.13).gamep.vcxproj
+++ b/GameProgramming/1ST/(23.03.13).gamep/(23.03.13).gamep/(23.03.13).gamep.vcxproj
@@ -139,9 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="숫자기억.cpp" />
-    <ClCompile Include="야구게임.cpp">
+    <ClCompile Include="20201_경동엽_숫자기억.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="20201_경동엽_야구게임.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
