WIN API - 에니메이션 시트 활용

--- a/Windows API/1ST/(23.03.28)/Animation/Animation/Animation.vcxproj
+++ b/Windows API/1ST/(23.03.28)/Animation/Animation/Animation.vcxproj
@@ -152,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Animation.ico" />
+    <Image Include="Data\Hero.bmp" />
     <Image Include="Data\Map.bmp" />
     <Image Include="Data\pikachu_Run.bmp" />
     <Image Include="small.ico" />
