--- a/Windows API/1ST/(23.03.28)/Animation/Animation/Animation.vcxproj.filters
+++ b/Windows API/1ST/(23.03.28)/Animation/Animation/Animation.vcxproj.filters
@@ -51,5 +51,8 @@
     <Image Include="Data\Map.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="Data\Hero.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
