게임프로그래밍 - 절대음감게임 만들기 과제 완성

--- a/GameProgramming/1ST/(23.03.31).gamep/(23.03.31).gamep/(23.03.31).gamep.vcxproj
+++ b/GameProgramming/1ST/(23.03.31).gamep/(23.03.31).gamep/(23.03.31).gamep.vcxproj
@@ -140,10 +140,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="절대음감 게임 만들기.cpp">
+    <ClCompile Include="20201_경동엽_절대음감 게임.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="한 줄만 새로 쓰기.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="한 줄만 새로 쓰기.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
