자료구조 - 숙제 완료

--- a/Data Structure/1ST/20230405/20230405/20230405.vcxproj
+++ b/Data Structure/1ST/20230405/20230405/20230405.vcxproj
@@ -139,10 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="++연산자를 중복해보자.cpp" />
+    <ClCompile Include="++연산자를 중복해보자.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="+연산자를 중복해보자.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="==연산자를 붕복해보자.cpp" />
     <ClCompile Include="복사생성자1.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
