--- a/GameProgramming/1ST/(23.04.06).gamep/(23.04.06).gamep/(23.04.06).gamep.vcxproj.filters
+++ b/GameProgramming/1ST/(23.04.06).gamep/(23.04.06).gamep/(23.04.06).gamep.vcxproj.filters
@@ -15,26 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="20201_경동엽_절대음감 게임.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="한 줄만 새로 쓰기.cpp">
+    <ClCompile Include="console.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h">
+    <ClInclude Include="console.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="(23.03.31).gamep.rc">
-      <Filter>리소스 파일</Filter>
-    </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Media Include="pickupCoin.wav">
-      <Filter>리소스 파일</Filter>
-    </Media>
   </ItemGroup>
 </Project>
