--- a/GameProgramming/1ST/(23.04.06).gamep/(23.04.06).gamep/(23.04.06).gamep.vcxproj.filters
+++ b/GameProgramming/1ST/(23.04.06).gamep/(23.04.06).gamep/(23.04.06).gamep.vcxproj.filters
@@ -21,9 +21,24 @@
     <ClCompile Include="console.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Real_Main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="StartScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MainLogic.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="StartScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MainLogic.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
