WIN API - 네모 움직이게, Scene

--- a/Windows API/1ST/(23.04.17)/Game/Client/Client.vcxproj.filters
+++ b/Windows API/1ST/(23.04.17)/Game/Client/Client.vcxproj.filters
@@ -11,6 +11,9 @@
     <Filter Include="Util">
       <UniqueIdentifier>{eaae9973-8523-4557-baac-3bcbec01017f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameScene">
+      <UniqueIdentifier>{7e964808-208b-44d0-9a15-130d5423d169}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -31,6 +34,9 @@
     <ClInclude Include="Game.h">
       <Filter>Game</Filter>
     </ClInclude>
+    <ClInclude Include="StartScene.h">
+      <Filter>GameScene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -41,6 +47,9 @@
     </ClCompile>
     <ClCompile Include="Game.cpp">
       <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="StartScene.cpp">
+      <Filter>GameScene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
