자료구조 - 수업때 못 푼 문제(두 수 뽑아서 더하기)

--- a/Data Structure/1ST/20230419/20230419/20230419.vcxproj.filters
+++ b/Data Structure/1ST/20230419/20230419/20230419.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="별찍기-10.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="두 수 뽑아서 더하기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
