--- a/Data Structure/1ST/20230427/20230427/20230427.vcxproj.filters
+++ b/Data Structure/1ST/20230427/20230427/20230427.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="9012 - 괄호.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="4949 - 균형잡힌 세상.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
