게임프로그래밍 - 폭탄 터지는거

--- a/GameProgramming/1ST/(23.04.06).gamep/(23.04.06).gamep/(23.04.06).gamep.vcxproj.filters
+++ b/GameProgramming/1ST/(23.04.06).gamep/(23.04.06).gamep/(23.04.06).gamep.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="console.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Real_Main.cpp">
+    <ClCompile Include="RealMain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="StartScene.cpp">
