--- a/Windows API/1ST/(23.04.17)/Game/Engine/Engine.vcxproj.filters
+++ b/Windows API/1ST/(23.04.17)/Game/Engine/Engine.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="Scene">
       <UniqueIdentifier>{27d8db28-c0bb-4118-a0a4-cffe2028b170}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource">
+      <UniqueIdentifier>{9a3ace27-fcb9-4229-b2cf-b0fad2a9c359}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -36,6 +39,9 @@
     <ClInclude Include="SceneManager.h">
       <Filter>Scene</Filter>
     </ClInclude>
+    <ClInclude Include="SoundManager.h">
+      <Filter>Resource</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -61,6 +67,9 @@
     </ClCompile>
     <ClCompile Include="SceneManager.cpp">
       <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="SoundManager.cpp">
+      <Filter>Resource</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
