--- a/Network/1ST/20230518/package.json
+++ b/Network/1ST/20230518/package.json
@@ -9,11 +9,13 @@
   "author": "dongyeop",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-sessions": "^1.0.6",
-    "morgan": "^1.10.0"
+    "express-session": "^1.17.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
