--- a/GameProgramming/1ST/(23.05.15).gamep/(23.04.07).gamep/(23.04.07).gamep.vcxproj
+++ b/GameProgramming/1ST/(23.05.15).gamep/(23.04.07).gamep/(23.04.07).gamep.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{4d59e180-466d-49ff-8ab9-cb22e85d50c1}</ProjectGuid>
     <RootNamespace>My230407gamep</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>(23.05.15).gamep</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
