게임 프로그래밍 - 맵 생성

--- a/GameProgramming/1ST/(23.05.19).gamep/(23.05.19).gamep/(23.05.19).gamep.vcxproj.filters
+++ b/GameProgramming/1ST/(23.05.19).gamep/(23.05.19).gamep/(23.05.19).gamep.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="MapManager.cpp">
       <Filter>Map</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
@@ -47,6 +50,9 @@
     </ClInclude>
     <ClInclude Include="MapManager.h">
       <Filter>Map</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Object</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
