게임프로그래밍 - WINAPI 입출력

--- a/GameProgramming/2ND/(23.08.22).winapi/(23.08.22).winapi/(23.08.22).winapi.vcxproj
+++ b/GameProgramming/2ND/(23.08.22).winapi/(23.08.22).winapi/(23.08.22).winapi.vcxproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="(23.08.22).winapi.ico" />
+    <Image Include="game.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
