--- a/GameProgramming/2ND/(23.09.19).winapi/(23.09.19).winapi/(23.09.19).winapi.vcxproj
+++ b/GameProgramming/2ND/(23.09.19).winapi/(23.09.19).winapi/(23.09.19).winapi.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="define.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="KeyMgr.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -151,6 +152,7 @@
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="TimeMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
