--- a/GameProgramming/2ND/(23.09.19).winapi/(23.09.19).winapi/(23.09.19).winapi.vcxproj.filters
+++ b/GameProgramming/2ND/(23.09.19).winapi/(23.09.19).winapi/(23.09.19).winapi.vcxproj.filters
@@ -29,6 +29,12 @@
     <Filter Include="Engine\04.Object">
       <UniqueIdentifier>{1d17709b-3f5d-456b-9a9d-bfc0646e9e84}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\05.Scene">
+      <UniqueIdentifier>{d01b18e7-062c-44e1-b411-6330ba5bafe3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\03.Manager\SceneMgr">
+      <UniqueIdentifier>{0bece418-eba5-4cd9-93dc-95558ee2bc0d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="(23.09.19).winapi.h">
@@ -70,6 +76,12 @@
     <ClInclude Include="enums.h">
       <Filter>Engine\01.Header</Filter>
     </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Engine\05.Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneMgr.h">
+      <Filter>Engine\03.Manager\SceneMgr</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="(23.09.19).winapi.rc">
@@ -105,6 +117,12 @@
     </ClCompile>
     <ClCompile Include="Vec2.cpp">
       <Filter>Engine\01.Header</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>Engine\05.Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneMgr.cpp">
+      <Filter>Engine\03.Manager\SceneMgr</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
