게임프로그래밍 - 충돌

--- a/GameProgramming/2ND/(23.11.10).gamep/2023_winapi_framework(2-2)/2023_winapi_framework(2-2).vcxproj.filters
+++ b/GameProgramming/2ND/(23.11.10).gamep/2023_winapi_framework(2-2)/2023_winapi_framework(2-2).vcxproj.filters
@@ -59,6 +59,9 @@
     <Filter Include="Engine\03. Manager\CollisionMgr">
       <UniqueIdentifier>{f563c11d-b9a3-47c6-b8ee-28920e51bc3f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\03. Manager\EventMgr">
+      <UniqueIdentifier>{bc57a250-b8fe-4de7-ac9c-724914cdf793}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2023_winapi_framework(2-2).h">
@@ -142,6 +145,9 @@
     <ClInclude Include="CollisionMgr.h">
       <Filter>Engine\03. Manager\CollisionMgr</Filter>
     </ClInclude>
+    <ClInclude Include="EventMgr.h">
+      <Filter>Engine\03. Manager\EventMgr</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="2023_winapi_framework(2-2).rc">
@@ -219,6 +225,9 @@
     </ClCompile>
     <ClCompile Include="CollisionMgr.cpp">
       <Filter>Engine\03. Manager\CollisionMgr</Filter>
+    </ClCompile>
+    <ClCompile Include="EventMgr.cpp">
+      <Filter>Engine\03. Manager\EventMgr</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
