--- a/GameProgramming/2ND/(23.11.10).gamep/2023_winapi_framework(2-2)/2023_winapi_framework(2-2).vcxproj
+++ b/GameProgramming/2ND/(23.11.10).gamep/2023_winapi_framework(2-2)/2023_winapi_framework(2-2).vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="Core.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="enums.h" />
+    <ClInclude Include="EventMgr.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Game_Scene.h" />
     <ClInclude Include="KeyMgr.h" />
@@ -181,6 +182,7 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CollisionMgr.cpp" />
     <ClCompile Include="Core.cpp" />
+    <ClCompile Include="EventMgr.cpp" />
     <ClCompile Include="Game_Scene.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
     <ClCompile Include="main.cpp" />
