--- a/GameProgramming/2ND/(23.11.14).gamep/2023_winapi_framework(2-2)/2023_winapi_framework(2-2).vcxproj
+++ b/GameProgramming/2ND/(23.11.14).gamep/2023_winapi_framework(2-2)/2023_winapi_framework(2-2).vcxproj
@@ -148,6 +148,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="2023_winapi_framework(2-2).h" />
+    <ClInclude Include="Animation.h" />
+    <ClInclude Include="Animator.h" />
     <ClInclude Include="BaseWindow.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Collider.h" />
@@ -177,6 +179,8 @@
     <ClInclude Include="Vec2.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="Animator.cpp" />
     <ClCompile Include="BaseWindow.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Collider.cpp" />
